Moved the onClick event handler of the delete entry icon to the button its inclosed within to allow users to access this functionality through focus on it through use of tabbing, changed the styling of this same icon to be visible when the user either hovers or focuses on it by inverting its colour when the morning display is active, made a slight revision to the partial that styles the contribute prompt component to prevent it from overlapping with the textarea element inside the writing section, and reduced the width of the user preferences and main navigation menus at smaller screen resolution sizes.

--- a/src/styles/sass/_mediaQueries.scss
+++ b/src/styles/sass/_mediaQueries.scss
@@ -27,8 +27,8 @@
         margin: 0;  
         height: 100%;
         width: 47.5%;
-        min-width: 15rem;
-        max-width: 15rem;
+        min-width: 12rem;
+        max-width: 12rem;
         z-index: 100;
 
         .homeLink {
@@ -75,6 +75,11 @@
 
         }
 
+    }
+
+     .userPreferences {
+        min-width: 12rem;
+        max-width: 12rem;
     }
 
     .navigationActive {
