--- a/src/styles/sass/_modeDisplays.scss
+++ b/src/styles/sass/_modeDisplays.scss
@@ -201,6 +201,19 @@
 
     }
 
+    .articleList {
+
+        .deleteButton {
+            
+            &:hover,
+            &:focus {
+                color: $morningBackground;
+            }
+
+        }
+
+    }
+
     .errorPage {
 
         .errorRedirect {
